--- a/gitDemoFE/Pages/Counter.razor
+++ b/gitDemoFE/Pages/Counter.razor
@@ -7,6 +7,7 @@
 <p role="status">Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<button class="btn btn-primary" @onclick="DecrementCount">DecrementCount me</button>
 
 @code {
     private int currentCount = 0;
@@ -14,5 +15,9 @@
     private void IncrementCount()
     {
         currentCount+=3;
+    }
+     private void DecrementCount()
+    {
+        currentCount-=3;
     }
 }
